Implemented bit packing method
Bit packing method (pack) has to be optimized to deal with redundancies (more details in code)

Also, memory leak???

--- a/Compression/Compression/Compression.vcxproj
+++ b/Compression/Compression/Compression.vcxproj
@@ -144,6 +144,9 @@
     <ClCompile Include="Compression.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BinaryCompress.hpp" />
+    <ClInclude Include="BinaryConvert.hpp" />
+    <ClInclude Include="BitPack.hpp" />
     <ClInclude Include="CombinatoricCompress.hpp" />
     <ClInclude Include="probability.hpp" />
     <ClInclude Include="stringprocess.hpp" />
